--- a/src/assets/customize-style/common-style.scss
+++ b/src/assets/customize-style/common-style.scss
@@ -493,10 +493,6 @@ svg.booking-oto-rating-stars__hollow-star {
   color: red;
 }
 
-.cl-black {
-  color: black;
-}
-
 .text-secondary {
   color: var(--secondary-text);
 }
